alignment issue

--- a/xtal-material-checkbox-radio.css
+++ b/xtal-material-checkbox-radio.css
@@ -142,3 +142,9 @@
 .form-has-error .form-checkbox-button,
 .form-has-error .form-radio-button {
   color: #d9534f; }
+
+span[slot="label"] {
+  line-height: 24px; }
+
+::slotted(span) {
+  line-height: 24px; }
